[package]
name = "sod-crossbeam"
version = "0.2.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Eric Thill"]
repository = "https://github.com/thill/sod-crossbeam"
description = "Service Oriented Design - Crossbeam"
keywords = ["service", "pattern"]
categories = ["rust-patterns"]
exclude = ["Cargo.lock"]

[dependencies]
sod = "0.2.1"
crossbeam = "0.8.2"
